src/pp/block3/cc/symbol/DeclUse.g4
grammar DeclUse;

program : '(' series ')' ;
series  : unit* ;
unit    : decl            # declUnit
        | use             # useUnit
        | '(' series ')'  # seriesUnit
        ;
decl    : 'D:' ID ;
use     : 'U:' ID ;

ID : [a-zA-Z]+;
WS : [ \t\n\r]+ -> skip;
